PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Improved performance of switch statement. (Dmitry)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Implemented access to INI variables from within .ini file. (Andrei)
- PHP will now respect extension dependencies when initializing. (Wez)
- Added SAPI hook to get the current request time. (Rasmus)
- Added new functions:
  . array_diff_key() (Andrey)
  . array_diff_ukey() (Andrey)
  . array_intersect_key() (Christiano Duarte)
  . array_intersect_ukey() (Christiano Duarte)
  . stream_context_get_default() (Wez)
  . stream_socket_enable_crypto() (Wez)
  . DomDocumentFragment->appendXML() (Christian)
  . SimpleXMLElement->registerXPathNamespace() (Christian)
  . mysqli->client_info property (Georg)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
- Added DomDocument->recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added support of parameter->value arrays to xsl_xsltprocessor_set_parameter() 
  (Tony)
- Fixed bug with raw_post_data not getting set. (Brian)
- Fixed bug in mysql->client_version. (Georg)
- Fixed ZTS destruction. (Marcus)
- Fixed bug #29728 (Reflection API Feature: Default parameter value). (Marcus)
- Fixed bug #29522 (accessing properties without connection). (Georg)
- Fixed bug #29335 (fetch functions now use MYSQLI_BOTH as default). (Georg)
- Fixed bug #29311 (calling parent constructor in mysqli). (Georg)
- Fixed bug #29256 (SOAP HTTP Error when envelop size is more than 24345 bytes)
  (Dmitry, Wez)